Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56303

ASSERT when drag&drop'ing <img> elements on Windows (Debug build)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.8.0 RC
    • 5.8.0 Alpha
    • WebEngine
    • None
    • da27d9e35e23719a828d563998741da8c6f40bc1

    Description

      Dragging an image on a QQuickWebEngineView repeately to an assert in debug builds.

      1   base::debug::BreakDebugger                               debugger_win.cc            21   0x180b9bfcc    
      2   logging::LogMessage::~LogMessage                         logging.cc                 751  0x180a95993    
      3   content::RenderViewHostImpl::GrantFileAccessFromDropData render_view_host_impl.cc   1259 0x1813fdb46    
      4   content::RenderViewHostImpl::DragTargetDrop              render_view_host_impl.cc   667  0x1813fc969    
      5   QtWebEngineCore::WebContentsAdapter::endDragging         web_contents_adapter.cpp   1258 0x180269a1a    
      6   QQuickWebEngineView::dropEvent                           qquickwebengineview.cpp    1524 0x7ffe65f028cb 
      7   QQuickItem::event                                        qquickitem.cpp             7586 0x7ffe4bea22e4 
      8   QApplicationPrivate::notify_helper                       qapplication.cpp           3741 0x5148703e     
      9   QApplication::notify                                     qapplication.cpp           3101 0x514818c3     
      10  QCoreApplication::notifyInternal2                        qcoreapplication.cpp       988  0x77858076     
      11  QCoreApplication::sendEvent                              qcoreapplication.h         231  0x77862f52     
      12  QQuickWindowPrivate::deliverDragEvent                    qquickwindow.cpp           2352 0x7ffe4bed61c3 
      13  QQuickWindow::event                                      qquickwindow.cpp           1531 0x7ffe4bece0e6 
      14  QApplicationPrivate::notify_helper                       qapplication.cpp           3741 0x5148703e     
      15  QApplication::notify                                     qapplication.cpp           3101 0x514818c3     
      16  QCoreApplication::notifyInternal2                        qcoreapplication.cpp       988  0x77858076     
      17  QCoreApplication::sendEvent                              qcoreapplication.h         231  0x77862f52     
      18  QGuiApplicationPrivate::processDrop                      qguiapplication.cpp        2879 0x7ffe4b078702 
      19  QWindowSystemInterface::handleDrop                       qwindowsysteminterface.cpp 707  0x7ffe4b033c0b 
      20  QWindowsOleDropTarget::Drop                              qwindowsdrag.cpp           639  0x7ffe5e22f82e 
      ... <More>                                                                                                  
      

      Attachments

        For Gerrit Dashboard: QTBUG-56303
        # Subject Branch Project Status CR V

        Activity

          People

            jbornema Joerg Bornemann
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes