Fix DCHECK when dropping items onto WebEngineView

Chromium 53 now requires to call RVH::FilterDropData() before
DragTargetDragEnter and DragTargetDrop. This fixes the DCHECK and allows
Chromium to filter the dropdata's URL (via RenderProcess::FilterURL)
before proceeding.

Task-number: QTBUG-56303
Change-Id: I29ad350b0b66d2ca1daae1d6d83f6e01206d1250
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Viktor Engelmann <viktor.engelmann@qt.io>